# apps/api/src/main/java/cl/zzenner/cobranza/dispositivos/api/DispositivoDeOtroUsuarioException.java
@@ -7,4 +7,8 @@ public class DispositivoDeOtroUsuarioException extends RuntimeException {
     public DispositivoDeOtroUsuarioException(UUID dispositivoId) {
         super("El dispositivo ya está asociado a otro usuario: " + dispositivoId);
     }
+
+    public DispositivoDeOtroUsuarioException(String identificadorInstalacion) {
+        super("El identificador de instalación ya está asociado a otro usuario: " + identificadorInstalacion);
+    }
 }
