# apps/api/src/main/java/cl/zzenner/cobranza/dispositivos/api/DispositivoNoValidoException.java
@@ -7,4 +7,8 @@ public class DispositivoNoValidoException extends RuntimeException {
     public DispositivoNoValidoException(UUID dispositivoId) {
         super("Dispositivo no válido o no autorizado: " + dispositivoId);
     }
+
+    public DispositivoNoValidoException(String identificadorInstalacion) {
+        super("Dispositivo no válido o no autorizado: " + identificadorInstalacion);
+    }
 }
